RE-356 - Fixed UI text overlap

--- a/RecommendationEngine/RecommendationEngine/FrontEnd/src/containers/JobLogPopUp/JobLogPopUp.css
+++ b/RecommendationEngine/RecommendationEngine/FrontEnd/src/containers/JobLogPopUp/JobLogPopUp.css
@@ -10,4 +10,5 @@
 }
 #col-description {
     width: 60%;
+    word-break: break-word;
 }
